# WgForgeTrains

./: CMakeLists.txt  README.md  gtest_dependency.pri  gui.pro  style.astylerc  test.pro  tests.pro  trains_gui.pro
design/: diagram.xmi
fast_server/: dynamic.txt  line.py  player.py  player.txt  point.py  static.txt  testserver.py  train.py  world.py
include/: CommandSender.h  QRunnerThread.h  Runner.h
include/ai/: ArtMarket.h  ArtTown.h  BRBot.h  Barrier.h  BlockLine_копия.h  BotSharedData.h  CollisionAllower.h  ComplexBot.h  GreedyBot.h  HomeChecker.h  IBot.h  IBotSegment.h  IPathGenerator.h  ISubBot.h  JustDoItBot.h  LineBlock.h  LineBlocker.h  NPBot.h  PathCalculator.h  Post.h  ScoreCalc.h  SwitchAI.h  TrainAI.h  TrainGoalPredictor.h  UpgradeAI.h
include/client/: ITrainClient.h  TCPTrainClient.h
include/convertors/: ICoordsMapReader.h  IDynamicMapReader.h  IModelConvertor.h  IMoveWriter.h  IPlayerReader.h  IStaticMapReader.h  IUpgradeWriter.h
include/gui/: QWorldWidget.h  Ticker.h  WorldWidget.h
include/models/: CoordModel.h  CoordsMap.h  DynamicMap.h  EventModel.h  EventType.h  GoodType.h  LineModel.h  MoveModel.h  PlayerModel.h  PointModel.h  PostModel.h  PostType.h  SpeedType.h  StaticMap.h  TrainModel.h  UpgradeModel.h
include/network/: ResposeMessage.h  TCPClient.h  TCPSession.h  TCPSocket.h
include/utils/: GraphPlaner.h  pi.h
include/world/: BasePost.h  EventFactory.h  ICommandSender.h  IEvent.h  IPost.h  IUpgradeble.h  Line.h  Market.h  Player.h  Point.h  PostFactory.h  Storage.h  Town.h  Train.h  World.h
libs/easylogging++/: easylogging++.h
src/: CommandSender.cpp  QRunnerThread.cpp  Runner.cpp  main_console.cpp  main_gui.cpp
src/ai/: ArtMarket.cpp  ArtTown.cpp  BRBot.cpp  Barrier.cpp  BotSharedData.cpp  CollisionAllower.cpp  ComplexBot.cpp  GreedyBot.cpp  HomeChecker.cpp  JustDoItBot.cpp  LineBlocker.cpp  NPBot.cpp  PathCalculator.cpp  Post.cpp  (+6 more)
tests/: reader.h
(+65 files in other folders)
